about page updated

--- a/Switch/www.switchmobilityev.com/en/company.html
+++ b/Switch/www.switchmobilityev.com/en/company.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="utf-8" />
 <link rel="canonical" href="company.html" />
-<meta name="description" content="A Net Zero electric vehicle company backed by over 100 years of experience." />
+<meta name="description" content="A Net Zero electric vehicle company backed by over 50 years of experience." />
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -374,9 +374,9 @@
 			<div class="hero-holder">
 				<div class="section-heading" data-aos="fade-up">
 					<h2 class="title"  data-editor-processed="true">
-						Hello, we're SWITCH
+						Hello, we're SABOO eZONE	
 					</h2>
-					<p class="subtitle"  data-editor-processed="true">A next-generation electric vehicle company backed by over 100 years of experience.
+					<p class="subtitle"  data-editor-processed="true">A next-generation electric vehicle company backed by over 50 years of experience.
 </p>
 				</div>
 			</div>
@@ -440,7 +440,7 @@
 		</div>
 	</section>
 	
-<section class="generic-padding bg-color-grey mb-5"  >
+<!-- <section class="generic-padding bg-color-grey mb-5"  >
 		<div class="container-fluid">
 			<div class="row mb-1">
 				<div class="col-md-5">
@@ -935,7 +935,7 @@
 			
 
 		</div>
-	</section>
+	</section> -->
 	<section class="split-column mb-5"  >
 		<div class="row no-gutters align-items-center">
 			<div class="col-md-6 order-md-last generic-padding split-col-banner aboutCompanyBackground"
