--- a/Switch/www.switchmobilityev.com/en/current-vehicles.html
+++ b/Switch/www.switchmobilityev.com/en/current-vehicles.html
@@ -449,8 +449,7 @@
               <path
                 class="st1"
                 d="M105.2,1.9c2.8,0,5.2,0,7.8,0c-2.9,13.8-5.8,27.4-8.7,41.1c-2.5,0-4.9,0-7.7,0C99.4,29.2,102.3,15.6,105.2,1.9z  "
-              /></svg
-          ></a>
+              /></svg          ></a>
         </div>
 
         <button
